--- a/test.html
+++ b/test.html
@@ -20,12 +20,12 @@
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/synaptic@1.1.4/dist/synaptic.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjs@6.6.4/dist/math.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
+  <script src="https://asinerum.github.io/project/scr/xuteng.js"></script>
   </head>
   <body>
   <div class="body" id="body">
