--- a/wallet.html
+++ b/wallet.html
@@ -13,6 +13,9 @@
 <script src="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/trumbowyg.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bitcoinjs.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_decimal.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_cash.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
