--- a/wallet.html
+++ b/wallet.html
@@ -89,8 +89,11 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipAdAbout">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.png"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.png"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.gif"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.gif"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrLtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc.gif"><span class="result">LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDsh">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U.gif"><span class="result">XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDog">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE.gif"><span class="result">DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
