--- a/raweth.html
+++ b/raweth.html
@@ -79,6 +79,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipExAbout">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.gif"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.gif"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
