--- a/rawbit.html
+++ b/rawbit.html
@@ -67,7 +67,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><a class="button" data-action="RawPureBtc" id="_button_RawTxDoEth">?</a></td><td><textarea class="longfat" id="txdata"></textarea><br/><a class="link" data-action="RawCopyHex" id="_button_RawCopyHex">?</a></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="RawPushBtc" id="_button_RawPushEth">?</a></td><td><textarea class="longfat" id="txlink"></textarea><br/><a class="link" data-action="RawCopyApi" id="_button_RawCopyApi">?</a></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="RawPushBtc" id="_button_RawPushBtc">?</a></td><td><textarea class="longfat" id="txlink"></textarea><br/><a class="link" data-action="RawCopyApi" id="_button_RawCopyCmd">?</a></td></tr>
 </table>
 <div class="result" id="_txdata_status"></div>
 <div class="result" id="_help_txdata"></div>
