Add onchange event to BTC generator

--- a/rawbit.html
+++ b/rawbit.html
@@ -36,7 +36,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="BipDecrypt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpBtc">?</span></td><td><input type="text" class="address" value="" id="exp_btc"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpBtc">?</span></td><td><input type="text" class="address" data-change="RawBxValue" value="" id="exp_btc"/></td></tr>
 </table>
 <div class="result" id="_decrypt_status"></div>
 <div class="result" id="_help_decrypt"></div>
