--- a/scr/test.html
+++ b/scr/test.html
@@ -9,6 +9,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bitcoinjs.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_decimal.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_cash.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
@@ -20,6 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
+  <script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
   <script src="https://asinerum.github.io/project/scr/xuteng23.js"></script>
   <script src="https://asinerum.github.io/project/scr/xutmsg23.js"></script>
   <script src="https://asinerum.github.io/project/scr/xbutton.js"></script>
