--- a/test.html
+++ b/test.html
@@ -26,8 +26,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
   <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
-  <script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
   <script src="https://asinerum.github.io/project/scr/xuteng.js"></script>
+  <script src="https://asinerum.github.io/project/scr/sol.js"></script>
   </head>
   <body>
   <div class="body" id="body">
