Update Wallet.html and Test.html

--- a/wallet.html
+++ b/wallet.html
@@ -10,6 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_solanaweb3.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bitcoinjs.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_decimal.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
@@ -19,6 +20,7 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/sol.js"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -91,6 +93,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrLtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc.gif"><span class="result">LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDsh">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U.gif"><span class="result">XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDog">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE.gif"><span class="result">DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">SOLANA DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
