Update home page index

--- a/index.html
+++ b/index.html
@@ -34,9 +34,25 @@
 <a name="BTCOFF"/><a href="./rawbit.html">BITCOIN OFFLINE RAW TRANSACTION GENERATOR</a><br/>
 <a name="ETHRAW"/><a href="./reth.html">ETHEREUM RAW TRANSACTION GENERATOR</a><br/>
 <a name="ETHOFF"/><a href="./raweth.html">ETHEREUM OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="DSHRAW"/><a href="./rbit.html#chain=dashcoin">DASHCOIN [DASH] RAW TRANSACTION GENERATOR</a><br/>
+<a name="DSHOFF"/><a href="./rawbit.html#chain=dashcoin">DASHCOIN [DASH] OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="DGERAW"/><a href="./rbit.html#chain=dogecoin">DOGECOIN [DOGE] RAW TRANSACTION GENERATOR</a><br/>
+<a name="DGEOFF"/><a href="./rawbit.html#chain=dogecoin">DOGECOIN [DOGE] OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="LTCRAW"/><a href="./rbit.html#chain=litecoin">LITECOIN [LTC] RAW TRANSACTION GENERATOR</a><br/>
+<a name="LTCOFF"/><a href="./rawbit.html#chain=litecoin">LITECOIN [LTC] OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="BSCRAW"/><a href="./reth.html#chain=binance">BINANCE COIN [BNB/BSC] RAW TRANSACTION GENERATOR</a><br/>
+<a name="BSCOFF"/><a href="./raweth.html#chain=binance">BINANCE COIN [BNB/BSC] OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="ETCRAW"/><a href="./reth.html#chain=classic">ETHEREUM CLASSIC [ETC] RAW TRANSACTION GENERATOR</a><br/>
+<a name="ETCOFF"/><a href="./raweth.html#chain=classic">ETHEREUM CLASSIC [ETC] OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="BTNRAW"/><a href="./rbit.html#chain=testnet">BITCOIN TESTNET RAW TRANSACTION GENERATOR</a><br/>
+<a name="BTNOFF"/><a href="./rawbit.html#chain=testnet">BITCOIN TESTNET OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="RINRAW"/><a href="./reth.html#chain=rinkeby">RINKEBY TESTNET RAW TRANSACTION GENERATOR</a><br/>
+<a name="RINOFF"/><a href="./raweth.html#chain=rinkeby">RINKEBY TESTNET OFFLINE RAW TRANSACTION GENERATOR</a><br/>
+<a name="ROPRAW"/><a href="./reth.html#chain=ropsten">ROPSTEN TESTNET RAW TRANSACTION GENERATOR</a><br/>
+<a name="ROPOFF"/><a href="./raweth.html#chain=ropsten">ROPSTEN TESTNET OFFLINE RAW TRANSACTION GENERATOR</a><br/>
 <a name="ETHTXO"/><a href="./esb.html">ETHEREUM SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="EV3TXO"/><a href="./esa.html">ETHEREUM SENDING TOOL WITH V3 KEYSTORE</a><br/>
-<a name="BSCTXO"/><a href="./bsb.html">BINANCE COIN [BSC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
+<a name="BSCTXO"/><a href="./bsb.html">BINANCE COIN [BNB/BSC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETCTXO"/><a href="./csb.html">ETHEREUM CLASSIC [ETC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETHMAN"/><a href="./account.html">ETHEREUM ACCOUNT MANIPULATION TOOL</a><br/>
 <a name="CRTEST"/><a href="./test.html">CRYPTO TESTING TOOLS</a><br/>
