ADD CRYPTO MANIPULATION TOOLS FOR DESKTOPS

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 <a name="CRTEST"/><a href="./test.html">CRYPTO TESTING TOOLS</a><br/>
 </div>
 <br/>
+<div class="header">CRYPTO MANIPULATION TOOLS FOR DESKTOPS</div>
+<hr class="cp"/>
+<div style="text-align:right;">
+<a name="VETSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/vechain">VECHAIN [VET] SENDING TOOL FOR DESKTOPS</a><br/>
+<a name="KLTSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/klaytn">KLAYTN [KLAY] SENDING TOOL FOR DESKTOPS</a><br/>
+</div>
+<br/>
 <div class="header">ASINERUM COMMUNITY TOOLS</div>
 <hr class="cp"/>
 <div style="text-align:right;">
