Add SOL web sender

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <a name="EV3TXO"/><a href="./esa.html">ETHEREUM SENDING TOOL WITH V3 KEYSTORE</a><br/>
 <a name="BSCTXO"/><a href="./bsb.html">BINANCE COIN [BNB/BSC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETCTXO"/><a href="./csb.html">ETHEREUM CLASSIC [ETC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
+<a name="SOLTXO"/><a href="./ssb.html">SOLANA [SOL] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETHMAN"/><a href="./account.html">ETHEREUM ACCOUNT MANIPULATION TOOL</a><br/>
 <a name="CRTEST"/><a href="./test.html">CRYPTO TESTING TOOLS</a><br/>
 </div>
