Add SOL encode/decode htmls

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <hr class="cp"/>
 <div style="text-align:right;">
 <a name="WALLET"/><a href="./wallet.html">BITCOIN & ETHEREUM OFFLINE PAPER WALLET GENERATOR</a><br/>
+<a name="WALSOL"/><a href="./walsol.html">SOLANA OFFLINE PAPER WALLET GENERATOR</a><br/>
 <a name="BTCRAW"/><a href="./rbit.html">BITCOIN RAW TRANSACTION GENERATOR</a><br/>
 <a name="BTCOFF"/><a href="./rawbit.html">BITCOIN OFFLINE RAW TRANSACTION GENERATOR</a><br/>
 <a name="ETHRAW"/><a href="./reth.html">ETHEREUM RAW TRANSACTION GENERATOR</a><br/>
