--- a/ssb.html
+++ b/ssb.html
@@ -57,7 +57,7 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)</div>
 </div>
-<script src="./startSession.js"></script>
-<script src="./menu.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/startSession.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
 </body>
 </html>
