Algoran sending tools

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
+<script src="https://unpkg.com/algosdk@latest"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -31,6 +32,7 @@
 <div style="text-align:right;">
 <a name="WALLET"/><a href="./wallet.html">BITCOIN & ETHEREUM OFFLINE PAPER WALLET GENERATOR</a><br/>
 <a name="WALSOL"/><a href="./walsol.html">SOLANA OFFLINE PAPER WALLET GENERATOR</a><br/>
+<a name="WALALG"/><a href="./walgo.html">ALGORAND OFFLINE PAPER WALLET GENERATOR</a><br/>
 <a name="BTCRAW"/><a href="./rbit.html">BITCOIN RAW TRANSACTION GENERATOR</a><br/>
 <a name="BTCOFF"/><a href="./rawbit.html">BITCOIN OFFLINE RAW TRANSACTION GENERATOR</a><br/>
 <a name="ETHRAW"/><a href="./reth.html">ETHEREUM RAW TRANSACTION GENERATOR</a><br/>
@@ -56,6 +58,7 @@
 <a name="BSCTXO"/><a href="./bsb.html">BINANCE COIN [BNB/BSC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETCTXO"/><a href="./csb.html">ETHEREUM CLASSIC [ETC] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="SOLTXO"/><a href="./ssb.html">SOLANA [SOL] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
+<a name="ALGTXO"/><a href="./asb.html">ALGORAND [ALGO] SENDING TOOL WITH BIP38 KEYSTORE</a><br/>
 <a name="ETHMAN"/><a href="./account.html">ETHEREUM ACCOUNT MANIPULATION TOOL</a><br/>
 <a name="CRTEST"/><a href="./test.html">CRYPTO TESTING TOOLS</a><br/>
 </div>
