--- a/walgo.html
+++ b/walgo.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html lang="en">
 <head>
-<title>ASINERUM SOLANA PAPER WALLET GENERATOR</title>
+<title>ASINERUM ALGORAND PAPER WALLET GENERATOR</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/fonts.css" rel="stylesheet" type="text/css"/>
 <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/style.css" rel="stylesheet" type="text/css"/>
@@ -20,6 +20,7 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
+<script src="https://unpkg.com/algosdk@latest"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -31,9 +32,9 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="Bip2AccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="new_sol"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="Bip3AccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="new_algo"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipCaution">?</span></td><td><span class="textnotice" id="_note_BipCaution">?</span></td></tr>
 </table>
 <div class="result" id="_account_status"><span id="_note_BipAccount">?</span></div>
@@ -46,10 +47,10 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncPwd">?</span></td><td><input type="password" class="address" value="" id="enc_pwd"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="Bip2Encrpt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="old_sol"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="Bip3Encrpt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="old_algo"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">?</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipWarning">?</span></td><td><span class="textnotice" id="_note_BipWarning">?</span></td></tr>
 </table>
@@ -65,9 +66,9 @@
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="Bip2Decrpt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="exp_sol"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="Bip3Decrpt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="exp_algo"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
 </table>
 <div class="result" id="_decrypt_status"></div>
 <div class="result" id="_help_decrypt"></div>
