--- a/wallet.html
+++ b/wallet.html
@@ -20,6 +20,7 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
+<script src="https://unpkg.com/algosdk@latest"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -93,6 +94,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDsh">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U.gif"><span class="result">XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDog">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE.gif"><span class="result">DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">SOLANA DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">ALGORAND DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
