--- a/ssb.html
+++ b/ssb.html
@@ -55,6 +55,19 @@
 </div>
 <hr class="cp"/>
 <br/>
+<a name="PROJECT"></a>
+<div class="header" id="_header_BipProject">APPLICATION DESCRIPTION</div>
+<hr class="cp"/>
+<div>
+<table class="cover">
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">SOLANA DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
+</table>
+<div class="result" id="_ad_status"></div>
+<div class="result" id="_help_ad"></div>
+</div>
+<hr class="cp"/>
+<br/>
 <div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startSession.js"></script>
