--- a/walgo.html
+++ b/walgo.html
@@ -75,6 +75,21 @@
 </div>
 <hr class="cp"/>
 <br/>
+<a name="PROJECT"></a>
+<div class="header" id="_header_BipProject">APPLICATION DESCRIPTION</div>
+<hr class="cp"/>
+<div>
+<table class="cover">
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipAdAbout">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">ALGORAND DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
+</table>
+<div class="result" id="_ad_status"></div>
+<div class="result" id="_help_ad"></div>
+</div>
+<hr class="cp"/>
+<br/>
 <div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startSession.js"></script>
