--- a/wallet.html
+++ b/wallet.html
@@ -35,6 +35,7 @@
 <tr><td class="buttoner"><a class="button" data-action="BipeAccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccBtc">?</span></td><td><input type="text" class="address" value="" id="new_btc"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccEth">?</span></td><td><input type="text" class="address" value="" id="new_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccWeb">?</span></td><td><input type="text" class="address" value="" id="new_web"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccKey">?</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccHex">?</span></td><td><input type="text" class="copy" value="" id="new_hex"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipCaution">?</span></td><td><span class="textnotice" id="_note_BipCaution">?</span></td></tr>
@@ -54,6 +55,7 @@
 <tr><td class="buttoner"><a class="button" data-action="BipEncrypt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeOldBtc">?</span></td><td><input type="text" class="address" value="" id="old_btc"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeOldEth">?</span></td><td><input type="text" class="address" value="" id="old_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldWeb">?</span></td><td><input type="text" class="address" value="" id="old_web"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">?</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipWarning">?</span></td><td><span class="textnotice" id="_note_BipWarning">?</span></td></tr>
 </table>
@@ -72,6 +74,7 @@
 <tr><td class="buttoner"><a class="button" data-action="BipDecrypt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeExpBtc">?</span></td><td><input type="text" class="address" value="" id="exp_btc"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeExpEth">?</span></td><td><input type="text" class="address" value="" id="exp_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpWeb">?</span></td><td><input type="text" class="address" value="" id="exp_web"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeExpKey">?</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeExpHex">?</span></td><td><input type="text" class="copy" value="" id="exp_hex"/></td></tr>
 </table>
@@ -90,6 +93,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.gif"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.gif"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrWeb">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/476626001755806856681215756752077681640163277055.gif"><span class="result">476626001755806856681215756752077681640163277055</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrLtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc.gif"><span class="result">LWkpdzvq8nTyNBRJzCnkTZpFWLjW6x29Yc</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDsh">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U.gif"><span class="result">XnDiD3Gu1qSWGKKjfx7g35SH8TwuzjtX4U</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrDog">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE.gif"><span class="result">DGfxv3ZeMY8CeNukYeo1jJv6BG6XGQrRFE</span></a></td></tr>
